# BlablLauncher

./: .gitignore  AUTHORS  CMakeLists.txt  README.md
cmake/: PlatformWindowsGCC.cmake
data/: ConfigBlabl.txt
res/: blabl.rc
src/: CMakeLists.txt  Process.cpp  Process.h  key_binding.cpp  key_binding.h  key_listener.cpp  key_listener.h  main.cpp  utils.cpp  utils.h
